Fixed article spacing

--- a/src/views/pages.scss
+++ b/src/views/pages.scss
@@ -6,7 +6,7 @@ $darkBlue : #0e153a;
 article{
     text-align: center;
     width: 100%;
-    margin: 4rem 0 6rem 0;
+    margin: 4rem 0 6rem 0 !important;
 
     .title{
         font-family: "Nunito-Bold";
@@ -27,7 +27,7 @@ span{
 @media (min-width: 801px) {  
     article{
         text-align: left;
-        margin:0 0 20vh 0;
+        margin: 0 0 20vh 0 !important;
 
         .title{
             font-size: 6vh;
